<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:scrollbars="none"
	>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TableLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TableRow
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >
<TableLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_column="0"
    android:layout_weight="1"   
    >
<TableRow
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >
<TextView  
	android:id="@+id/Enable"
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:text="@string/enableSensor"
    />
</TableRow>    
<TableRow
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >
	<CheckBox
		android:layout_height="wrap_content"
		android:id="@+id/chkOrient">
	</CheckBox>
</TableRow>
<TableRow
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >	
	<CheckBox
		android:layout_height="wrap_content"
		android:id="@+id/chkGyro">
	</CheckBox>
</TableRow>
<TableRow
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >	
	<CheckBox
		android:layout_height="wrap_content"
		android:id="@+id/chkAccl">
	</CheckBox>
</TableRow>
<TableRow
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >		
	<CheckBox
		android:layout_height="wrap_content"
		android:id="@+id/chkMagnet">
	</CheckBox>
</TableRow>
<TableRow
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >		
	<CheckBox
		android:layout_height="wrap_content"
		android:id="@+id/chkProximity">
	</CheckBox>
</TableRow>
<TableRow
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >		
	<CheckBox
		android:layout_height="wrap_content"
		android:id="@+id/chkLight">
	</CheckBox>
</TableRow>
</TableLayout>
<TableLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_column="1"
    android:layout_weight="2"   
    >
<TableRow
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >
<TextView  
	android:id="@+id/SensorGroup"
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:text="@string/sensorcaption"
    />
</TableRow>
<TableRow
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >
<RadioGroup
	android:layout_width="wrap_content"
	android:layout_height="wrap_content" 
	android:id="@+id/RdGpSensor">
	<RadioButton
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/RdSensor_Orient"
		android:text="@string/orient">
	</RadioButton>
	<RadioButton
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/RdSensor_Gyro"
		android:text="@string/gyro">
	</RadioButton>
	<RadioButton
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/RdSensor_Accl"
		android:text="@string/accl">
	</RadioButton>
	<RadioButton
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/RdSensor_Magnet"
		android:text="@string/magnet">
	</RadioButton>
	<RadioButton
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/RdSensor_Proximity"
		android:text="@string/proximity">
	</RadioButton>
	<RadioButton
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/RdSensor_Light"
		android:text="@string/light">
	</RadioButton>
</RadioGroup>
</TableRow>
</TableLayout>
<TableLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_column="2"
    android:layout_weight="2"   
    >
<TableRow
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >
<TextView  
	android:id="@+id/DelayMode"
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:text="@string/delaymodecaption"
    />
</TableRow>
<TableRow
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >
<RadioGroup
	android:layout_width="wrap_content"
	android:layout_height="wrap_content" 
	android:id="@+id/RdGpSensorMode">
	<RadioButton
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/RdSensorMode_Fastest"
		android:text="@string/fastest">
	</RadioButton>
	<RadioButton
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/RdSensorMode_Game"
		android:text="@string/game">
	</RadioButton>
	<RadioButton
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/RdSensorMode_Normal"
		android:text="@string/normal">
	</RadioButton>
	<RadioButton
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/RdSensorMode_UI"
		android:text="@string/ui">
	</RadioButton>
</RadioGroup>
</TableRow>
</TableLayout>
</TableRow>
</TableLayout>

<TableLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TableRow
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >
	<TextView  
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:layout_column="0"
	    android:layout_weight="1"     
	    android:text="@string/fileinterval"
	    />
	<Spinner
		android:id="@+id/spnSelectFileInterval"
	    android:layout_width="wrap_content"     
	    android:layout_height="wrap_content"
	    android:layout_column="1"
	    android:layout_weight="1"
	    />
	<CheckBox
		android:layout_height="wrap_content"
		android:id="@+id/chkRecCont"
    	android:layout_column="2"
    	android:layout_weight="1"     
		android:text="@string/recCont">
	</CheckBox>   
</TableRow>
</TableLayout>

<TableLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TableRow
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >
	<TextView  
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"  
		    android:layout_column="0"
		    android:layout_weight="1"	      
		    android:text="@string/serverIP"
		    />
	<EditText
		    android:id="@+id/ServerAddress"
		    android:layout_width="wrap_content" 		    
		    android:layout_height="wrap_content"
		    android:layout_column="1"
		    android:layout_weight="5"
		    />	
</TableRow>
</TableLayout>

<TableLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TableRow
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >
	<TextView  
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:layout_column="0"
	    android:layout_weight="1"     
	    android:text="@string/serverport"
	    />
	<EditText
	    android:id="@+id/ServerPort"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_column="1"
	    android:layout_weight="2"	    
	    />		
	<Button android:layout_height="wrap_content"
	    android:layout_column="2"
	    android:layout_weight="2"
		android:id="@+id/Connect"
		android:text=""
		/>	
</TableRow>
</TableLayout>

<TextView  
	android:id="@+id/ShowInfo"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text=""
    />
<Button android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:id="@+id/Record"
		android:text=""
		/>	
<TextView  
	android:id="@+id/ShowRecord"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text=""
    />
</LinearLayout>
</ScrollView>
